--- a/konyvek_beadando/src/main/resources/application.properties
+++ b/konyvek_beadando/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 spring.application.name=konyvek_beadando
 
-# Adatbázis konfiguráció
+# Adatbazis konfiguracio
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/bookstore
 spring.datasource.username=root
 spring.datasource.password=Kemecse2003
 
-# Hibernate beállítások
+# Hibernate beallitasok
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
