--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,5 +13,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Build with Maven
-        working-directory: C:\Users\MSI\Downloads\konyvek_beadando
+        working-directory: C:\Users\MSI\Downloads\konyvek_beadando\pom.xml
         run: mvn clean install
