--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
-        working-directory: /konyvek_beadando/pom.xml
+        working-directory: konyvek_beadando/pom.xml
