--- a/konyvek_beadando/pom.xml
+++ b/konyvek_beadando/pom.xml
@@ -41,9 +41,12 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+            			<groupId>org.springframework.boot</groupId>
+            				<artifactId>spring-boot-maven-plugin</artifactId>
+           					 <configuration>
+                					<mainClass>com.konyvesbolt.konyvek_beadando.KonyvekBeadandoApplication</mainClass>
+           					 </configuration>
+       			</plugin>
 		</plugins>
 	</build>
 
