--- a/.github/workflow/main.yaml
+++ b/.github/workflow/main.yaml
@@ -1,4 +1,4 @@
-name: Maven Build
+name: CI-CD Pipeline
 
 on:
   push:
@@ -21,3 +21,13 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+
+      - name: Copy Jar to Git Repository
+        run: cp target/konyvek_beadando-0.0.1-SNAPSHOT.jar ./konyvtar_beadando/
+
+      - name: Commit and Push
+        run: |
+          cd konyvtar_beadando/
+          git add .
+          git commit -m "Add jar file"
+          git push origin main
